Adjust eclipse settings